grafana/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-operator
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grafana-operator
  template:
    metadata:
      labels:
        name: grafana-operator
    spec:
      serviceAccountName: grafana-operator
      containers:
        - name: grafana-operator
          image: quay.io/integreatly/grafana-operator:latest
          args:
            - '--grafana-image=quay.io/openshift/origin-grafana'
            - '--grafana-image-tag=4.2'
          ports:
          - containerPort: 60000
            name: metrics
          command:
          - grafana-operator
          imagePullPolicy: Always
          readinessProbe:
            exec:
              command:
                - stat
                - /tmp/operator-sdk-ready
            initialDelaySeconds: 4
            periodSeconds: 10
            failureThreshold: 1
