grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-service
  namespace: myproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: grafana.minishift.local
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: grafana-http
